# AdaptiveRAG

./: README.md  app.py  db_test.py  langgraph.json  main.py  pyproject.toml  requirements.txt  start_server.sh
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Backend/: main.py  schemas.py
Backend/routers/: init.py  invoke.py  resume.py
research/: test.ipynb
src/chains/: answer_grader.py  hallucination_grader.py  question_rewriter.py  question_router.py  rag_chain.py  retrieval_grader.py
src/embedding/: embedding.py
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: RAG_nodes.py
src/retrievers/: retriever.py
src/states/: RAGState.py
src/web_search/: web_search_tool.py
utils/: documents_uplaoder.py  generated_document_uploader.py
