[project]
name = "aegis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-astradb>=0.6.1",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.8",
    "langgraph-api>=0.4.29",
    "langgraph-cli[inmem]>=0.4.2",
    "pydantic>=2.11.9",
    "pymupdf>=1.26.4",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
]
